--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,14 @@
-body {
-  position: relative;
-}
 body .block {
+  width: 100%;
+  height: 700px;
+  position: relative;
+  background-size: cover;
+}
+body .block .tets {
   position: absolute;
   width: 200px;
   height: 200px;
-  box-sizing: border-box;
   background: center no-repeat url(../img/8jo5_ur03_210531.jpg);
   background-size: cover;
+  transition: 0.1s;
 }/*# sourceMappingURL=main.css.map */
