--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,13 +1,20 @@
 body {
-    position: relative;   
+
     
     .block {
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        box-sizing: border-box;
-        background: center no-repeat url(../img/8jo5_ur03_210531.jpg);
+        width: 100%;
+        height: 700px;
+        position: relative;   
         background-size: cover;
+
+        .tets {
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            background: center no-repeat url(../img/8jo5_ur03_210531.jpg);
+            background-size: cover;
+            transition: 0.1s;
+        }
     }
 
 }
