--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,28 @@ body .block .tets {
   position: absolute;
   width: 200px;
   height: 200px;
-  background: center no-repeat url(../img/8jo5_ur03_210531.jpg);
+  background: center no-repeat url(../img/8jo5_ur03_210531.png);
   background-size: cover;
   transition: 0.1s;
+}
+body .block .house {
+  position: absolute;
+  width: 300px;
+  height: 200px;
+  background: center no-repeat url(../img/w3c8_2oob_220805.png);
+  background-size: cover;
+}
+body .gamereset:not(on) {
+  display: none;
+}
+body .gamereset.on {
+  text-align: center;
+  font-size: 100px;
+  display: block;
+  width: 100%;
+  height: 100vh;
+  background: rgba(170, 145, 145, 0.628);
+  position: absolute;
+  top: 0;
+  left: 0;
 }/*# sourceMappingURL=main.css.map */
